installdir = $(LIBDIR)/enigma2/python/Plugins/Extensions/CoolTVGuide

SUBDIRS = Cool3D CoolSkin locale 

install_PYTHON = \
	__init__.pyo \
	plugin.pyo \
	CoolEasyGuide.pyo \
	CoolInfoGuide.pyo \
	CoolSingleGuide.pyo \
	CoolTVGuide.png \
	CoolChannelGuide.pyo

install_DATA = keymap.xml maintainer.info
