installdir = $(LIBDIR)/enigma2/python/Plugins/Extensions/MyTube

install_PYTHON = \
		__init__.pyo \
		MyTubeSearch.pyo \
		MyTubeService.py \
		plugin.pyo \
		ThreadQueue.pyo

install_DATA = \
		list_bg.png \
		list_sel.png \
		maintainer.info \
		mytubemain_bg.png \
		starsbar_empty.png \
		starsbar_filled.png \
		suggestions_bg.png \
		plugin.png \
		LICENSE
		
