installdir = $(LIBDIR)/enigma2/python/Plugins/Extensions/MyTube

install_PYTHON = \
				 __init__.pyo \
				 maintainer.info \
				 MyTubeSearch.pyo \
				 MyTubeService.py \
				 MyTubeService.pyo \
				 plugin.pyo \
				 ThreadQueue.pyo

install_DATA = list_bg.png list_sel.png LICENSE maintainer.info mytubemain_bg.png plugin.png plugin.pyo starsbar_empty.png starsbar_filled.png suggestions_bg.png
