installdir = $(LIBDIR)/enigma2/python/Plugins/Extensions/OnDemand

SUBDIRS = icons locale 

install_PYTHON = \
				 bbciplayer.pyo \
				 CommonModules.pyo \
				 fourOD.pyo \
				 fourOD_token_decoder.pyo \
				 __init__.pyo \
				 itvplayer.pyo \
				 ondemand.png \
				 OUG.pyo \
				 plugin.pyo \
				 rteplayer.pyo \
				 threeplayer.pyo \
				 ui.pyo

install_DATA = LICENSE LICENSE.GPLv2 
