installdir = $(LIBDIR)/enigma2/python/Plugins/Extensions/TSonlineTV

SUBDIRS = img picons

install_PYTHON = \
				__init__.pyo \
				installer.pyo \
				plugin.png \
				plugin.pyo \
				restart.pyo \
				streams.pyo \
				userstreams.pyo \
				xmlupdate.pyo

install_DATA = MyriadPro-Regular.otf keymap.xml nstream.xml plugin.png userstream.xml  

