installdir = $(LIBDIR)/enigma2/python/Plugins/Extensions/TSsatEditor

SUBDIRS = ddbuttons

install_PYTHON = \
				__init__.pyo \
				mfaraj57.pyo \
				plugin.pyo \
				satedithd.pyo \
				sateditsd.pyo \
				satellite.pyo \
				setloader.pyo

install_DATA = \
				keymap.xml \
				lock_error.png \
				lock_off.png \
				sat.png 
