installdir = $(LIBDIR)/python/Plugins/Extensions/nStreamVOD

SUBDIRS = Moduls img  

install_PYTHON = \
		__init__.pyc \
		__init__.pyo \
		nStreamGoshaParser.pyc \
		nStreamGoshaParser.pyo \
		nStreamHTMLparser.py \
		nStreamHTMLparser.pyc \
		nStreamHTMLparser.pyo \
		nStreamVOD.plugin \
		nStreamYoutube.pyc \
		nStreamYoutube.pyo \
		plugin.pyc \
		plugin.pyo \
		streams.pyc \
		streams.pyo \
		VirtualKeyBoardRUS.pyc \
		VirtualKeyBoardRUS.pyo

install_DATA = \
		plugin.png \
		nStreamConfig.xml \
		MyriadPro-Regular.otf \
		keymap.xml \
		nStreamVOD.xml \
		nStreamFavorites.xml \
		nStreamSkin.xml \
		nStreamInternational.xml

