installdir = $(LIBDIR)/enigma1/python/Plugins/Extensions/CoolTVGuide/CoolSkin

install_DATA = \
			CoolChannelGuide2_1024.xml \
			CoolChannelGuide2_1280.xml \
			CoolChannelGuide3_1024.xml \
			CoolChannelGuide3_1280.xml \
			CoolChannelGuide_1024.xml \
			CoolChannelGuide_1280.xml \
			CoolChannelGuide_720.xml \
			CoolEasyGuide2_1024.xml \
			CoolEasyGuide2_1280.xml \
			CoolEasyGuide3_1024.xml \
			CoolEasyGuide3_1280.xml \
			CoolEasyGuide3_720.xml \
			CoolEasyGuide_1024.xml \
			CoolEasyGuide_1280.xml \
			CoolEasyGuide_720.xml \
			CoolInfoGuide_1024.xml \
			CoolInfoGuide_1280.xml \
			CoolInfoGuide_720.xml \
			CoolMultiGuide_1024.xml \
			CoolMultiGuide_1280.xml \
			CoolMultiGuide_720.xml \
			CoolNiceGuide_1024.xml \
			CoolNiceGuide_1280.xml \
			CoolNiceGuide_720.xml \
			CoolSearch_1024.xml \
			CoolSearch_1280.xml \
			CoolSearch_720.xml \
			CoolSingleGuide2_1024.xml \
			CoolSingleGuide2_1280.xml \
			CoolSingleGuide3_1024.xml \
			CoolSingleGuide3_1280.xml \
			CoolSingleGuide_1024.xml \
			CoolSingleGuide_1280.xml \
			CoolSingleGuide_720.xml \
			CoolTVGuideSetup.xml \
			CoolTVGuide_1024.xml \
			CoolTVGuide_1280.xml \
			CoolTVGuide_720.xml \
			CoolTinyGuide_1024.xml \
			CoolTinyGuide_1280.xml \
			CoolTinyGuide_720.xml \
			colour.txt \
			oled screens.txt 
