installdir = $(LIBDIR)/enigma2/python/Plugins/Extensions/PlayStream/streams

install_DATA = ADSC.cfg \
				ARAB.cfg \
				ArabTv.cfg \
				BRAZIL.cfg \
				CANAL+HD.cfg \
				DIGI SPORT 1 HD.cfg \
				fox soccer.cfg \
				France.cfg \
				Germany.cfg \
				JSC Sport.cfg \
				showtv.cfg \
				SPORT TV 1, 2 & 4 [PORTUGAL].cfg \
				SPORT TV2.cfg \
				Turkey.cfg 


