installdir = $(LIBDIR)/enigma2/python/Plugins/Extensions/PlayStream/streams

install_DATA = \
			   ADSC.cfg \
			   ARAB.cfg \
			   ArabTv.cfg \
			   BRAZIL.cfg \
			   CANAL+HD.cfg \
			   DIGISPORT_1HD.cfg \
			   fox_soccer.cfg \
			   France.cfg \
			   Germany.cfg \
			   JSC_Sport.cfg \
			   showtv.cfg \
			   SPORTTV_124_[PORTUGAL].cfg \
			   SPORT_TV2.cfg \
			   Turkey.cfg
