installdir = $(LIBDIR)/enigma2/python/Plugins/Extensions/TSonlineTV/img

install_DATA = \
			   72x36.png \
			   80x50.png \
			   Thumbs.db \
			   arrow.png \
			   blue.png \
			   chminus.png \
			   chplus.png \
			   clock.png \
			   ff.png \
			   flag.png \
			   flip_calender.png \
			   flip_clock4.png \
			   frame.png \
			   green.png \
			   left.png \
			   left_0.png \
			   menu.png \
			   pause.png \
			   play.png \
			   pristavka.png \
			   rahmen.png \
			   rahmen_big.png \
			   rec.png \
			   red.png \
			   right.png \
			   right_0.png \
			   rw.png \
			   slider_1280x10_hbg.png \
			   slider_1280x10_hfg.png \
			   tab_active.png \
			   tab_inactive.png \
			   tab_line.png \
			   top.png \
			   x37.png \
			   x37small.png \
			   yellow.png

