installdir = $(LIBDIR)/enigma2/python/Plugins/Extensions/TSsatEditor/ddbuttons

install_DATA = \
				blue.png \
				button_blue.png \
				button_green.png \
				button_red.png \
				green.png \
				lock_off.png \
				slider.png \
				button_blue_off.png \
				button_green_off.png \
				button_grey.png \
				button_yellow.png \
				lock_error.png \
				lock_on.png \
				red.png \
				yellow.png
