installdir = $(LIBDIR)/enigma2/python/Plugins/Extensions/icefilms

install_PYTHON = \
				__init__.pyc \
				__init__.pyo \
				jsunpack.pyc \
				jsunpack.pyo \
				res_180upload.pyc \
				res_180upload.pyo \
				res_billionuploads.pyc \
				res_billionuploads.pyo \
				res_movreel.pyc \
				res_movreel.pyo \
				res_rapidshare.pyc \
				res_rapidshare.pyo \
				res_sharebees.pyc \
				res_sharebees.pyo

install_DATA = res.conf
 
