installdir = $(LIBDIR)/python/Plugins/Extensions/nStreamVOD/Moduls

install_PYTHON = \
		nStreamModuls.py \
		nStreamModuls.pyc \
		nStreamModuls.pyo \
		nStreamModul_vizor_tv.py \
		nStreamModul_vizor_tv.pyc \
		nStreamModul_vizor_tv.pyo \
		nStreamModul_vkontakte.py \
		nStreamModul_vkontakte.pyc \
		nStreamModul_vkontakte.pyo
