installdir = $(LIBDIR)/enigma2/python/Plugins/Extensions/CoolTVGuide/Cool3D/MyDesign

install_DATA = \

CoolBack.png \
CoolBackS.png \
CoolFreeTuner.png \
CoolFreeTunerS.png \
CoolNow.png \
CoolNowS.png \
CoolPicon.png \
CoolPiconS.png \
CoolPiconSelect.png \
CoolPiconSelectS.png \
CoolPreRec.png \
CoolPreRecS.png \
CoolRec.png \
CoolRecS.png \
CoolSelect.png \
CoolSelectS.png
