installdir = $(pkglibdir)/python/Plugins/Extensions/nStreamVOD/playlist

dist_pkgdata_DATA = \
		arjlover.png \
		filminiizle.png \
		filmsehri.png \
		filmsevenler.png \
		germet.png \
		gosha.png \
		horoshotv.png \
		international.png \
		kinomax.png \
		miloshko.png \
		radio.png \
		sinemaizle.png \
		vizortv.png \
		vkontakte_video_logo.png \
		xxx.png \
		youtube.png
