installdir = $(LIBDIR)/enigma2/python/Plugins/Extensions/nStreamVOD/playlist

install_DATA = \
		arjlover.png \
		filminiizle.png \
		filmsehri.png \
		filmsevenler.png \
		germet.png \
		gosha.png \
		horoshotv.png \
		international.png \
		kinomax.png \
		miloshko.png \
		radio.png \
		sinemaizle.png \
		vizortv.png \
		vkontakte_video_logo.png \
		xxx.png \
		youtube.png
